infrastructure/incident-management/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ims-api.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: api  # Замените на имя вашего сервиса
            port:
              number: 8080
