infrastructure/incident-management/ingress/frontend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: frontend-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
  - host: ims.com
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: frontend  # Замените на имя вашего сервиса
            port:
              number: 80
